The Truth Architecture

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
   "
 >
   <p class="fw-bold mb-0"> <br>
-    © 2025 N4r35h. Some rights reserved.
+    © 2026 AegisTrail. Some rights reserved.
   </p>
   <p class="fw-bold mb-0"> <br>
     H4CK TH3 PL4N3T!
